# Conure

./: Cargo.toml  README.md
conure_client/: Cargo.toml
conure_client/src/: main.rs  rpc.rs  system_info.rs
conure_common/: Cargo.toml  build.rs
conure_common/src/: lib.rs  system_info.rs
conure_server/: .env.example  Cargo.toml  build.rs
conure_server/src/: client_manager.rs  config.rs  main.rs  server.rs
conure_server/src/ui/: client_list.rs  index.html  layout.rs  mod.rs
protocol/: conure_rpc.capnp
