[package]
name = "conure_server"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = { workspace = true }
conure_common = { workspace = true }
log = { workspace = true }
dotenv = "0.15.0"
serde_json = "1.0"
serde = "1.0"
thiserror = { workspace = true }
derive-new = { workspace = true }
# async
tokio = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
futures = { workspace = true }
# capnp
capnp = { workspace = true }
capnp-rpc = { workspace = true }

[build-dependencies]
capnpc = { workspace = true }
walkdir = { workspace = true }
fs_extra = { workspace = true }
